syntax = "proto3";

option java_package = "grpc";

/* Entidades */
message RecipeDto {
  int32 idRecipe = 1;
  string title = 2;
  string description = 3;
  string ingredients = 4;
  string category = 5;
  string steps = 6;
  int32 preparationTime = 7;
  User user = 8;
  repeated Photo photos = 9;
}

message User{
	int32 userId = 1;
	string username = 2;
}

message Photo{
  string url = 2;
}

/* Definicion de Procedimientos Remotos */
service RecipeService {

  rpc getRecipeById (getRecipeByIdRequest) returns (RecipeDto);
  rpc getAllRecipe (EmptyRecipe) returns (AllRecipesResponse);
  rpc addRecipe (RecipeDto) returns (ServerResponseRecipe);
  rpc getRecipesByUserId (getRecipesByUserIdRequest) returns (getRecipesByUserIdResponse);
  rpc editRecipe (RecipeDto) returns (ServerResponseRecipe);
  rpc getFavoriteRecipes(getFavoriteRecipesRequest) returns(getFavoriteRecipesResponse);
  
}

message EmptyRecipe {}

message getFavoriteRecipesRequest{
	int32 userId=1;
}

message getFavoriteRecipesResponse{
	repeated RecipeDto favoriteRecipes = 1;
}

message ServerResponseRecipe {
  string message = 1;
  int32 idRecipe = 2; 
}

message getRecipeByIdRequest {
  int32 idRecipe = 1;
}

message AllRecipesResponse{
	repeated RecipeDto recipes = 1;
}

message getRecipesByUserIdRequest {
  int32 idUser = 1;
}

message getRecipesByUserIdResponse{
	repeated RecipeDto recipes = 1;
}
